test/corpus/test.txt
================================================================================
Empty
================================================================================





JJ: This is a comment
--------------------------------------------------------------------------------

(source
  (comment))

================================================================================
Simple subject
================================================================================


JJ: This is a comment

A change
--------------------------------------------------------------------------------

(source
  (comment)
  (subject))

================================================================================
Simple subject and body
================================================================================


JJ: This is a comment

A change

These are some lines

that describe the

above change.
--------------------------------------------------------------------------------

(source
  (comment)
  (subject)
  (body_line)
  (body_line)
  (body_line))

================================================================================
Empty subject and body
================================================================================

      

These are some lines
that describe the
above change.
--------------------------------------------------------------------------------

(source
  (subject)
  (body_line)
  (body_line)
  (body_line))

================================================================================
Ignore rest
================================================================================

JJ: describe this change
A Change

These are some lines
that describe the
above change.

JJ: ignore-rest
JJ: heree
foo
JJ: ignore-rest
bar

baz
--------------------------------------------------------------------------------

(source
  (comment)
  (subject)
  (body_line)
  (body_line)
  (body_line)
  (ignore_rest
    (rest)))

================================================================================
Subject prefix
================================================================================

JJ: describe this change
feat(some change): this is a change

These are some lines
that describe the
above change.
--------------------------------------------------------------------------------

(source
  (comment)
  (subject
    (prefix
      (type)
      (scope)))
  (body_line)
  (body_line)
  (body_line))

================================================================================
Subject prefix unicode
================================================================================

JJ: describe this change
feat(some change)：this is a change

These are some lines
that describe the
above change.
--------------------------------------------------------------------------------

(source
  (comment)
  (subject
    (prefix
      (type)
      (scope)))
  (body_line)
  (body_line)
  (body_line))

================================================================================
Subject prefix no scope
================================================================================

JJ: describe this change
feat: this is a change

These are some lines
that describe the
above change.
--------------------------------------------------------------------------------

(source
  (comment)
  (subject
    (prefix
      (type)))
  (body_line)
  (body_line)
  (body_line))

================================================================================
Subject prefix unicode no scope
================================================================================

JJ: describe this change
feat：this is a change

These are some lines
that describe the
above change.
--------------------------------------------------------------------------------

(source
  (comment)
  (subject
    (prefix
      (type)))
  (body_line)
  (body_line)
  (body_line))

================================================================================
Subject prefix breaking
================================================================================

JJ: describe this change
JJ(foo)!: this is a breaking change

These are some lines
that describe the
above change.
--------------------------------------------------------------------------------

(source
  (comment)
  (subject
    (prefix
      (type)
      (scope)))
  (body_line)
  (body_line)
  (body_line))

================================================================================
Subject prefix no scope breaking
================================================================================

JJ: describe this change
JJ!: this is a breaking change

These are some lines
that describe the
above change.
--------------------------------------------------------------------------------

(source
  (comment)
  (subject
    (prefix
      (type)))
  (body_line)
  (body_line)
  (body_line))

================================================================================
Subject prefix empty
================================================================================

JJ: describe this change
feat(fo):

These are some lines
that describe the
above change.
--------------------------------------------------------------------------------

(source
  (comment)
  (subject)
  (body_line)
  (body_line)
  (body_line))

================================================================================
Subject prefix empty with whitespace
================================================================================

JJ: describe this change
feat: 

These are some lines
that describe the
above change.
--------------------------------------------------------------------------------

(source
  (comment)
  (subject
    (prefix
      (type)))
  (body_line)
  (body_line)
  (body_line))
